--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -93,7 +93,7 @@
           <option value="Chef">Chef</option>
           <option value="Camps">Camps</option>
           <option value="Theathre">Theathre</option>
-          <option value="Sea_Facing">Sea Facing</option>
+          <option value="Sea Facing">Sea Facing</option>
           <option value="Others">Others</option>
         </select>
       </div>
