--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -26,5 +26,6 @@
         </div>
         <button class="btn btn-success">Login</button>
     </form>
+<p>Don't have an account <a href="/signup">Sign Up</a></p>
     </div>
 </div>
