--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -37,5 +37,6 @@
         </div>
         <button class="btn btn-success">SignUp</button>
     </form>
+<p>Already have an account <a href="/login">Log In</a></p>
     </div>
 </div>
